--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
