--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "next": "12.1.0",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.9"
