--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
       "@services/*": [
         "./src/services/*"
       ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
     },
     "incremental": true
   },
