--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "prefer-const": "off",
     "no-use-before-define": "off",
     "no-underscore-dangle": "off",
+    "camelcase" : "off",
     "@typescript-eslint/no-use-before-define": [
       "error",
       { "functions": false, "classes": false, "variables": true }
