--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,8 @@
           "@pages": "./src/pages",
           "@hooks": "./src/hooks",
           "@services": "./src/services",
-          "@utils": "./src/utils"
+          "@utils": "./src/utils",
+          "@styles": "./src/styles"
         }
       }
     ]
