--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       "@utils/*": [
         "./src/utils/*"
       ],
+      "@styles/*": [
+        "./src/styles/*"
+      ],
     },
     "incremental": true
   },
