--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     "no-use-before-define": "off",
     "no-underscore-dangle": "off",
     "camelcase" : "off",
+    "react/no-array-index-key": "off",
     
     "@typescript-eslint/no-use-before-define": [
       "error",
